# meteread

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  compose.yaml  main.py  mkdocs.yml  pyproject.toml  requirements.txt
.claude/agent-memory/unit-test-writer/: MEMORY.md
.claude/agents/: integration-test-writer.md  unit-test-writer.md
.claude/skills/dsmr/: SKILL.md
.claude/skills/zensical/: SKILL.md
.github/workflows/: docker-image.yml
docs/: architecture.md  dsmr.md  extending.md  index.md
meter/: AbstractMeter.py  ElectricityMeter.py  GasMeter.py  GenericMeter.py  WaterMeter.py  __init__.py  abstractmeter.py  electricitymeter.py  gasmeter.py  watermeter.py
processor/: AbstractProcessor.py  ChainProcessor.py  DSMRElectricityProcessor.py  DSMRGasProcessor.py  DSMRv5Processor.py  DSMRv5ReadProcessor.py  DelayProcessor.py  DsmrProcessor.py  NoneProcessor.py  PassProcessor.py  RandomProcessor.py  ZeroProcessor.py  __init__.py
reader/: AbstractReader.py  DSMRv5RawReader.py  DSMRv5Reader.py  DSMRv5SerialReader.py  DelayReader.py  RandomReader.py  ZeroReader.py  __init__.py
storage/: AbstractStorage.py  CsvStorage.py  InfluxDBStorage.py  __init__.py
tests/: conftest.py  test_integration_csv.py  test_integration_influxdb.py  test_meters.py  test_processors.py  test_readers.py  test_storage.py
