[project]
name = "meteread"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "dsmr-parser>=1.4.3",
    "influxdb3-python>=0.7",
    "load-dotenv>=0.1.0",
    "typer>=0.19.2",
]

[dependency-groups]
dev = ["pytest>=8", "zensical"]

[tool.pytest.ini_options]
log_level = "INFO"
